<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="estatura">ESTATURA(m)</string>
    <string name="peso">PESO(kg)</string>
    <string name="texto_botonIMC">Calcula IMC</string>
    <string name="literal_IMC">Su IMC es:</string>
    <string name="Desnutrido">Desnutrido</string>
    <string name="BajoPeso">Bajo Peso</string>
    <string name="Normal">Normal</string>
    <string name="SobrePeso">Sobre Peso</string>
    <string name="Obeso">Obeso</string>
    <string name="hint_peso">Peso</string>
    <string name="hint_estatura">Estatura</string>
    <string name="texto_botonConsultaRangos">Rangos</string>
    <string name="literal_Rango">Su Rango es:</string>
    <string name="literal_desnutrido">IMC&lt;16</string>
    <string name="literal_bajopeso">16=&lt;IMC&lt;18</string>
    <string name="literal_normal">18&lt;IMC&lt;25</string>
    <string name="literal_sobrepeso">25&lt;IMC&lt;31</string>
    <string name="literal_obeso">IMC&gt;=31</string>
    <string name="texto_botonLogin">Acceder</string>
    <string name="texto_botonRegistro">Registrarse</string>
    <string name="literal_usuario">Usuario</string>
    <string name="hint_usuario">Usuario</string>
    <string name="literal_contrasena">Contraseña</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="usuario_no_informado">Nombre de usuario no informado</string>
    <string name="usuario_no_existe">El usuario no existe en BD se debe registrar</string>
    <string name="contrasena_no_informada">Contraseña no informada</string>
    <string name="usuario__existe">El usuario ya existe en la BD</string>
    <string name="registro__correcto">Registrado en la app correctamente</string>
    <string name="password__incorrecta">La contraseña introducida es incorrecta</string>
    <string name="expulsion_app">Se ha superado los intentos de login permitidos se cierra la app</string>
    <string name="titulo_dialog_salir">Salir de la aplicación</string>
    <string name="mensaje_dialog_salir">¿Desea salir de la aplicación?</string>
    <string name="titulo_dialog_salirIMC">Cerrar sesion</string>
    <string name="mensaje_dialog_salirIMC">¿Desea cerrar la sesion actual?</string>
    <string name="literal_Si">Si</string>
    <string name="literal_No">No</string>
    <string name="rangos_IMC">Rangos IMC</string>
    <string name="registro_IMC">Registro IMC</string>
    <string name="registro_IMC_correcto">El valor de IMC calculado se ha registrado correctamente en la BD.</string>
    <string name="titulo_ordenar_IMC">Ordenar por IMC</string>
    <string name="titulo_ordenar_fecha">Ordenar por fecha</string>




</resources>
