<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roberto.calculadoraimc.MainActivity"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    android:animateLayoutChanges="false"
    android:backgroundTintMode="multiply">

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="140dp"
    android:id="@+id/linearLayout">

    <TextView
        android:text="@string/estatura"
        android:id="@+id/literal_estatura"
        android:fontFamily="serif"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        style="none"
        android:layout_height="wrap_content"
         />

         <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/caja_estatura"
        android:textColor="@android:color/background_light"
             android:hint="@string/hint_estatura"
             android:layout_marginLeft="45dp"/>


</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/peso"
            android:id="@+id/literal_peso"
            android:fontFamily="serif"
            style="none"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/holo_orange_light"
            android:textColorHint="@android:color/holo_orange_light"
            android:layout_height="wrap_content"
           />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/caja_peso"
            android:inputType="numberDecimal"
            android:textColor="@android:color/background_light"
            android:hint="@string/hint_peso"
            android:layout_marginLeft="85dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="300dp">

        <Button
            android:text="@string/texto_botonIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_calcula_IMC"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:layout_gravity="left"
            />

        <Button
            android:text="@string/texto_botonConsultaRangos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_consulta_rangos"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            />

    </LinearLayout>



</RelativeLayout>
